# TUI-Art

./: .gitignore  README.md  Reproduction.java  a.out  pom.xml  test.cpp
.github/workflows/: ci-gtest.yaml
cpp/: CMakeLists.txt
cpp/include/: app_context.hpp
cpp/include/core/: shapes.hpp  surface.hpp  types.hpp
cpp/include/ecs/: README.md  archetypes.hpp  components.hpp  concepts.hpp  entity.hpp  query.hpp  query_runner.hpp
cpp/include/orchestration/: world.hpp
cpp/include/renderer/: backend.hpp  surface.hpp
cpp/include/setup/: app_context.hpp  configs.hpp
cpp/include/tui/: backend.hpp  print_constants.hpp  surface.hpp  terminal_dimension_publishing.hpp  terminal_status.hpp
cpp/include/tui/ansi/: ansi_constants.hpp  ansi_printer.hpp
cpp/include/utils/: logger.hpp  sparse_set.hpp  stable_vector.hpp
cpp/scripts/: run.sh  run_tests.sh
cpp/src/: app_context.cpp  main.cpp
cpp/src/renderer/: backend.cpp
cpp/src/tui/: backend.cpp  terminal_dimension_publishing.cpp  terminal_status.cpp
cpp/src/tui/ansi/: ansi_printer.cpp
cpp/tests/core/: types.cpp  types_test.cpp
cpp/tests/ecs/: archetypes_test.cpp  component_test.cpp  concepts_test.cpp  query_test.cpp
cpp/tests/tui/: terminal_status_test.cpp
cpp/tests/utils/: logger_test.cpp
java_legacy/: pom.xml
java_legacy/src/main/java/com/example/: Main.java  (+1 more)
java_legacy/src/main/resources/: branchparams.properties  trunkparams.properties
src/main/java/com/example/: Controller.java  Main.java  Printer.java  TerminalColour.java
src/main/resources/: branchparams.properties  trunkparams.properties
(+115 files in other folders)
